refactory - using lombok's @NonNull, java 17 records and other optimizations