@@ -1,5 +1,6 @@
 package poc.test.data;
 
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import poc.test.domain.EntityNotFoundException;
@@ -8,7 +9,6 @@ import poc.test.domain.ReadPersonData;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -18,7 +18,7 @@ class ReadPersonDataImpl implements ReadPersonData {
     private final PersonJpaRepository jpaRepository;
 
     @Override
-    public Person findById(UUID id) {
+    public Person findById(@NonNull UUID id) {
         return jpaRepository.findById(id)
                 .map(mapper::toPerson)
                 .orElseThrow(() -> new EntityNotFoundException(String.format("entity person not found under id %s", id)));
@@ -28,7 +28,7 @@ class ReadPersonDataImpl implements ReadPersonData {
     public List<Person> findAll() {
         return jpaRepository.findAll().stream()
                 .map(mapper::toPerson)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
